--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">Ibitech</string>
+    <string name="name">Name</string>
+    <string name="todo">TODO</string>
+    <string name="id_number">ID number</string>
+    <string name="cellphone_number">Cellphone Number</string>
+    <string name="email_address">Email Address</string>
+    <string name="create_password">Create Password</string>
+    <string name="confirm_password">Confirm Password</string>
+    <string name="sign_up">Sign Up</string>
 </resources>
